--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -4,6 +4,22 @@
 @import "{{ site.theme }}";
 
 
+
+// navigation
+
+// nav {
+// 	float: right;
+// 	width: 200px;
+// 	min-height: 504px;
+// 	padding-left: 20px;
+// 	font-size: 12px;
+// 	line-height: 1.3;
+// 	background: transparent url(../images/sidebar-bg.jpg) 0 0 no-repeat;
+// }
+
+
+// specials
+
 .hoverswitch {
     display: flex;
     flex-direction: column;
