--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -1,13 +1,5 @@
 <nav>
     {% assign pages_sorted = site.pages | sort: 'url' %}
     ### navigation
-    <ul>
-    {% for page in pages_sorted %}
-        {% if page.title %}
-        <li>
-            <a href="{{ page.url }}">{{ page.title }}</a>
-        </li>
-        {% endif %}
-    {% endfor %}
-    </ul>
+    {% include nav_list.html page_list=pages_sorted %}
 </nav>
