little layout tweek

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -5,6 +5,16 @@
 
 
 
+// base layout modifications
+
+.inner {
+	width: 1000px;
+}
+
+aside#sidebar {
+    width: 250px;
+}
+
 // navigation
 
 // nav {
