--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="{{ '/assets/css/print.css' | relative_url }}" media="print" type="text/css">
 
     <script src="{{ '/assets/js/formula_parser.js?v=' | append: site.github.build_revision | relative_url }}" charset="utf-8"></script>
+    <script src="{{ '/assets/js/findNearest.js?v=' | append: site.github.build_revision | relative_url }}" charset="utf-8"></script>
     <script src="{{ '/assets/js/table_calc.js?v=' | append: site.github.build_revision | relative_url }}" charset="utf-8"></script>
-    
+
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
