added html base information

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,6 +3,9 @@
 <head>
     <title>{{page.title}} - {{ site.title | default: site.github.repository_name }}</title>
     <meta charset='utf-8'>
+
+    <base target="_self" href="{{ '/' | absolute_url }}">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
